# aws-export-credentials

./: CONTRIBUTORS.md  README.md  aws_export_credentials.py  pyproject.toml
.github/workflows/: pypi.yaml
aws_export_credentials/: __init__.py  __main__.py  aws_export_credentials.py  config_file_writer.py
