[tool.poetry]
name = "aws-export-credentials"
version = "0.1.0"
description = "Get AWS credentials from a profile to inject into other programs"
authors = ["Ben Kehoe <ben@kehoe.io>"]
license = "Apache-2.0"

[tool.poetry.scripts]
aws-export-credentials = 'aws_export_credentials:main'

[tool.poetry.dependencies]
python = ">=3.5"
botocore = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
